inc/quiche.pp

unit quiche;



interface
{
  Automatically converted by H2Pas 1.0.0 from quiche.h
  The following command line parameters were used:
    quiche.h
}
    //{$INCLUDE ctypes.inc}
    uses Windows, Sockets, ctypes, winsock2, types;

    Type
    //bool = longbool;
    //cuint64 = QWord;
    //size_t = cuint64;
    //Puint8 = ^uint8;
    //cuint32 = LongWord;
    socklen_t = tsocklen;
    uint8_t = uint8;
    uint16_t = uint16;
    uint32_t = uint32;
    uint64_t = uint64;
    int64_t = int64;
    time_t = cint64;
    
    timespec = record
      tv_sec: time_t; //Seconds
      tv_nsec: clong; //Nanoseconds
    end;

    quiche_config = record
    end;
    quiche_conn = record
    end;
    quiche_h3_config = record
    end;
    quiche_h3_conn = record
    end;
    quiche_h3_event = record
    end;
    quiche_h3_header = record
        name: Puint8;
        name_len: size_t;
        value: Puint8;
        value_len: size_t;
    end;

    quiche_h3_priority = record
                       urgency: uint8;
                       incremental: bool;
    end;

    quiche_path_stats = record
      local_addr : sockaddr_storage;
      local_addr_len : socklen_t;
      peer_addr : sockaddr_storage;
      peer_addr_len : socklen_t;
      validation_state : ssize_t;
      active : bool;
      recv : size_t;
      sent : size_t;
      lost : size_t;
      retrans : size_t;
      rtt : uint64_t;
      cwnd : size_t;
      sent_bytes : uint64_t;
      recv_bytes : uint64_t;
      lost_bytes : uint64_t;
      stream_retrans_bytes : uint64_t;
      pmtu : size_t;
      delivery_rate : uint64_t;
    end;

    quiche_send_info = record
      from_sock : sockaddr_storage;
      from_len : socklen_t;
      to_sock : sockaddr_storage;
      to_len : socklen_t;
      at : timespec;
    end;

    quiche_recv_info = record
      from_sock: ^sockaddr;
      from_len: socklen_t;
      to_sock: ^sockaddr;
      to_len: socklen_t;
    end;


    quiche_stats = record
        recv : size_t;
        sent : size_t;
        lost : size_t;
        retrans : size_t;
        sent_bytes : uint64_t;
        recv_bytes : uint64_t;
        lost_bytes : uint64_t;
        stream_retrans_bytes : uint64_t;
        paths_count : size_t;
    end;

    quiche_stream_iter = record
                       // todo
    end;

    quiche_transport_params = record
        peer_max_idle_timeout : uint64_t;
        peer_max_udp_payload_size : uint64_t;
        peer_initial_max_data : uint64_t;
        peer_initial_max_stream_data_bidi_local : uint64_t;
        peer_initial_max_stream_data_bidi_remote : uint64_t;
        peer_initial_max_stream_data_uni : uint64_t;
        peer_initial_max_streams_bidi : uint64_t;
        peer_initial_max_streams_uni : uint64_t;
        peer_ack_delay_exponent : uint64_t;
        peer_max_ack_delay : uint64_t;
        peer_disable_active_migration : bool;
        peer_active_conn_id_limit : uint64_t;
        peer_max_datagram_frame_size : ssize_t;
    end;

    Pbool  = ^bool;
    Pchar  = ^char;
    Pquiche_config  = ^quiche_config;
    Pquiche_conn  = ^quiche_conn;
    Pquiche_h3_config  = ^quiche_h3_config;
    Pquiche_h3_conn  = ^quiche_h3_conn;
    Pquiche_h3_event  = ^quiche_h3_event;
    PPquiche_h3_event = ^Pquiche_h3_event;
    Pquiche_h3_header  = ^quiche_h3_header;
    Pquiche_h3_priority  = ^quiche_h3_priority;
    Pquiche_path_stats  = ^quiche_path_stats;
    Pquiche_recv_info  = ^quiche_recv_info;
    Pquiche_send_info  = ^quiche_send_info;
    Pquiche_stats  = ^quiche_stats;
    Pquiche_stream_iter  = ^quiche_stream_iter;
    Pquiche_transport_params  = ^quiche_transport_params;
    Psize_t  = ^size_t;
    Psockaddr  = ^sockaddr;
    Puint32_t  = ^uint32_t;
    Puint64_t  = ^uint64_t;
    Puint8_t  = ^uint8_t;
    PPuint8_t = ^Puint8_t;

    TProcedureLogging = procedure (line:Pchar; argp:pointer);
    TFunctionMatching = function (_para1:Puint8_t; _para2:size_t):bool;
    TFunctionCallbackCheck = function (name:Puint8_t; name_len:size_t; value:Puint8_t; value_len:size_t; argp:pointer):longint;
    TFunctionCallbackSettingCheck = function (identifier:uint64_t; value:uint64_t; argp:pointer):longint;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


  { Copyright (C) 2018-2019, Cloudflare, Inc. }
  { All rights reserved. }
  { }
  { Redistribution and use in source and binary forms, with or without }
  { modification, are permitted provided that the following conditions are }
  { met: }
  { }
  {     * Redistributions of source code must retain the above copyright }
  {       notice, this list of conditions and the following disclaimer. }
  { }
  {     * Redistributions in binary form must reproduce the above copyright }
  {       notice, this list of conditions and the following disclaimer in the }
  {       documentation and/or other materials provided with the distribution. }
  { }
  { THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS }
  { IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, }
  { THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR }
  { PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR }
  { CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, }
  { EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, }
  { PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR }
  { PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF }
  { LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING }
  { NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS }
  { SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. }
{$ifndef QUICHE_H}
{$define QUICHE_H}  
{$if defined(__cplusplus)}
//(* error 
//extern "C" {
{$endif}
//{$include <stdint.h>}
//{$include <stdbool.h>}
//{$include <stddef.h>}
//{$if defined(WIN32) || defined(_WIN32) || defined(__WIN32__) || defined(__NT__)}
//{$include <winsock2.h>}
//{$include <ws2tcpip.h>}
//{$include <time.h>}
//{$else}
//{$include <sys/socket.h>}
//{$include <sys/time.h>}
//{$endif}
//{$ifdef __unix__}
//{$include <sys/types.h>}
//{$endif}
//{$ifdef _MSC_VER}
//{$include <BaseTsd.h>}
//in define line 52 *)
//{$endif}
    { QUIC transport API. }
    { }
    { The current QUIC wire version. }
    const
      QUICHE_PROTOCOL_VERSION = $00000001;      
    { The maximum length of a connection ID. }
      QUICHE_MAX_CONN_ID_LEN = 20;      
    { The minimum length of Initial packets sent by a client. }
      QUICHE_MIN_CLIENT_INITIAL_LEN = 1200;      
    { There is no more work to do. }
    { The provided buffer is too short. }
    { The provided packet cannot be parsed because its version is unknown. }
    { The provided packet cannot be parsed because it contains an invalid }
    { frame. }
    { The provided packet cannot be parsed. }
    { The operation cannot be completed because the connection is in an }
    { invalid state. }
    { The operation cannot be completed because the stream is in an }
    { invalid state. }
    { The peer's transport params cannot be parsed. }
    { A cryptographic operation failed. }
    { The TLS handshake failed. }
    { The peer violated the local flow control limits. }
    { The peer violated the local stream limits. }
    { The specified stream was stopped by the peer. }
    { The specified stream was reset by the peer. }
    { The received data exceeds the stream's final size. }
    { Error in congestion control. }
    { Too many identifiers were provided. }
    { Not enough available identifiers. }
    { Error in key update. }

    type
      quiche_error = (QUICHE_ERR_DONE := -(1),QUICHE_ERR_BUFFER_TOO_SHORT := -(2),
        QUICHE_ERR_UNKNOWN_VERSION := -(3),QUICHE_ERR_INVALID_FRAME := -(4),
        QUICHE_ERR_INVALID_PACKET := -(5),QUICHE_ERR_INVALID_STATE := -(6),
        QUICHE_ERR_INVALID_STREAM_STATE := -(7),
        QUICHE_ERR_INVALID_TRANSPORT_PARAM := -(8),
        QUICHE_ERR_CRYPTO_FAIL := -(9),QUICHE_ERR_TLS_FAIL := -(10),
        QUICHE_ERR_FLOW_CONTROL := -(11),QUICHE_ERR_STREAM_LIMIT := -(12),
        QUICHE_ERR_STREAM_STOPPED := -(15),QUICHE_ERR_STREAM_RESET := -(16),
        QUICHE_ERR_FINAL_SIZE := -(13),QUICHE_ERR_CONGESTION_CONTROL := -(14),
        QUICHE_ERR_ID_LIMIT := -(17),QUICHE_ERR_OUT_OF_IDENTIFIERS := -(18),
        QUICHE_ERR_KEY_UPDATE := -(19));

    { Returns a human readable string with the quiche version number. }
(* Const before type ignored *)

    function quiche_version(): Pchar; stdcall;

    { Enables logging. |cb| will be called with log messages }
(* Const before type ignored *)
    function quiche_enable_debug_logging(cb: TProcedureLogging; argp: pointer):longint;stdcall;

    { Stores configuration shared between multiple connections. }

    // type
    { Creates a config object with the given version. }

    function quiche_config_new(version:uint32_t):Pquiche_config; stdcall;

    { Configures the given certificate chain. }
(* Const before type ignored *)
    function quiche_config_load_cert_chain_from_pem_file(config:Pquiche_config; path:Pchar):longint;

    { Configures the given private key. }
(* Const before type ignored *)
    function quiche_config_load_priv_key_from_pem_file(config:Pquiche_config; path:Pchar):longint;

    { Specifies a file where trusted CA certificates are stored for the purposes of certificate verification. }
(* Const before type ignored *)
    function quiche_config_load_verify_locations_from_file(config:Pquiche_config; path:Pchar):longint;

    { Specifies a directory where trusted CA certificates are stored for the purposes of certificate verification. }
(* Const before type ignored *)
    function quiche_config_load_verify_locations_from_directory(config:Pquiche_config; path:Pchar):longint;

    { Configures whether to verify the peer's certificate. }
    procedure quiche_config_verify_peer(config:Pquiche_config; v:bool);

    { Configures whether to send GREASE. }
    procedure quiche_config_grease(config:Pquiche_config; v:bool);

    { Enables logging of secrets. }
    procedure quiche_config_log_keys(config:Pquiche_config);

    { Enables sending or receiving early data. }
    procedure quiche_config_enable_early_data(config:Pquiche_config);

    { Configures the list of supported application protocols. }
(* Const before type ignored *)
    function quiche_config_set_application_protos(config:Pquiche_config; protos:Puint8_t; protos_len:size_t):longint;

    { Sets the `max_idle_timeout` transport parameter, in milliseconds, default is }
    { no timeout. }
    procedure quiche_config_set_max_idle_timeout(config:Pquiche_config; v:uint64_t);

    { Sets the `max_udp_payload_size transport` parameter. }
    procedure quiche_config_set_max_recv_udp_payload_size(config:Pquiche_config; v:size_t);

    { Sets the maximum outgoing UDP payload size. }
    procedure quiche_config_set_max_send_udp_payload_size(config:Pquiche_config; v:size_t);

    { Sets the `initial_max_data` transport parameter. }
    procedure quiche_config_set_initial_max_data(config:Pquiche_config; v:uint64_t);

    { Sets the `initial_max_stream_data_bidi_local` transport parameter. }
    procedure quiche_config_set_initial_max_stream_data_bidi_local(config:Pquiche_config; v:uint64_t);

    { Sets the `initial_max_stream_data_bidi_remote` transport parameter. }
    procedure quiche_config_set_initial_max_stream_data_bidi_remote(config:Pquiche_config; v:uint64_t);

    { Sets the `initial_max_stream_data_uni` transport parameter. }
    procedure quiche_config_set_initial_max_stream_data_uni(config:Pquiche_config; v:uint64_t);
